force-app/main/default/objects/Case/fields/Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Address_Name__c</fullName>
    <label>Address Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>