force-app/main/default/objects/Case/fields/Aftermarket_Items_Removed__c.field-meta.xml
<CustomField>
    <fullName>Aftermarket_Items_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aftermarket Items Removed?</label>
    <type>Checkbox</type>
</CustomField>