force-app/main/default/objects/Case/fields/AR_City__c.field-meta.xml
<CustomField>
    <fullName>AR_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>