force-app/main/default/objects/Case/fields/AR_Street__c.field-meta.xml
<CustomField>
    <fullName>AR_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>