force-app/main/default/objects/Case/fields/AR_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>AR_Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>