force-app/main/default/objects/Case/fields/Case_Number_for_Special_Claims__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_for_Special_Claims__c</fullName>
    <label>Case Number for Special Claims</label>
    <length>255</length>
    <type>Text</type>
</CustomField>