force-app/main/default/objects/Case/fields/Center_Seats__c.field-meta.xml
<CustomField>
    <fullName>Center_Seats__c</fullName>
    <label>Center Seats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Have been removed N/A ON 2018-2019 HONDAS</fullName>
            </value>
            <value>
                <fullName>Have not been removed and will incur charges to return seats</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>