force-app/main/default/objects/Case/fields/Chassis_Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Exterior_Color__c</fullName>
    <label>Chassis Exterior Color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>