force-app/main/default/objects/Case/fields/Chassis_PN__c.field-meta.xml
<CustomField>
    <fullName>Chassis_PN__c</fullName>
    <label>Chassis PN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>