force-app/main/default/objects/Case/fields/Chassis_Trim_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Trim_Identifier__c</fullName>
    <label>Chassis Trim Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>