force-app/main/default/objects/Case/fields/Chassis_Type_DL__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Type_DL__c</fullName>
    <label>Chassis Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Certified Pre-Owned</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pre Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>