force-app/main/default/objects/Case/fields/Chassis_VIN__c.field-meta.xml
<CustomField>
    <fullName>Chassis_VIN__c</fullName>
    <label>Chassis VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>