force-app/main/default/objects/Case/fields/Chassis_Year__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Year__c</fullName>
    <label>Chassis Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>