force-app/main/default/objects/Case/fields/Console__c.field-meta.xml
<CustomField>
    <fullName>Console__c</fullName>
    <label>Console</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has been removed N/A ON TOYOTA CHASSIS</fullName>
            </value>
            <value>
                <fullName>Has not been removed and will incur charges to return console</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>