force-app/main/default/objects/Case/fields/Conversion__c.field-meta.xml
<CustomField>
    <fullName>Conversion__c</fullName>
    <label>Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chrysler CompanionVan (CV) 2020-2021</fullName>
            </value>
            <value>
                <fullName>Chrysler Pacifica/Voyager Power Infloor (XI) 2017-2021</fullName>
            </value>
            <value>
                <fullName>Chrysler Pacifica/Voyager Manual Rear Entry (V7) 2017-2021</fullName>
            </value>
            <value>
                <fullName>Chrysler Voyager ADA Short Cut (VA) 2020-2021</fullName>
            </value>
            <value>
                <fullName>Chrysler Voyager ADA Long Cut (V3) 2020-2021</fullName>
            </value>
            <value>
                <fullName>Chrysler Voyager ADA Side Entry (E3) 2020-2021</fullName>
            </value>
            <value>
                <fullName>Toyota Sienna Hybrid Power Foldout (XT) 2021</fullName>
            </value>
            <value>
                <fullName>Honda Power Infloor (XI) 2018-2022</fullName>
            </value>
            <value>
                <fullName>Traverse Power Infloor (XI) 2020-2021</fullName>
            </value>
            <value>
                <fullName>Dodge/Chrysler Companion Van (CV) 2013-2020</fullName>
            </value>
            <value>
                <fullName>Dodge/Chrysler Manual Rear Entry (V7) 2013-2020</fullName>
            </value>
            <value>
                <fullName>Dodge/Chrysler Power Foldout (XT) 2013-2020</fullName>
            </value>
            <value>
                <fullName>Dodge/Chrysler ADA Side Entry (E3/E5)</fullName>
            </value>
            <value>
                <fullName>Chrysler Pacifica/Voyager Power Foldout (E2) 2017-2021</fullName>
            </value>
            <value>
                <fullName>Chrysler Pacifica/Voyager Power Foldout (XT) 2017-2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>