force-app/main/default/objects/Case/fields/Conversion_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type__c</fullName>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E2 - Power Foldout Ramp</fullName>
            </value>
            <value>
                <fullName>XT - XT Power Foldout Ramp</fullName>
            </value>
            <value>
                <fullName>XF - XT Manual Foldout Ramp</fullName>
            </value>
            <value>
                <fullName>Xi - Power In-Floor Ramp</fullName>
            </value>
            <value>
                <fullName>Toyota LI</fullName>
            </value>
            <value>
                <fullName>Toyota XL</fullName>
            </value>
            <value>
                <fullName>XM - Manual In-Floor Ramp</fullName>
            </value>
            <value>
                <fullName>CV - Companion Van Side Entry</fullName>
            </value>
            <value>
                <fullName>CP - Companion Van Side Entry Plus</fullName>
            </value>
            <value>
                <fullName>CX - Companion Van Side Entry Plus XT</fullName>
            </value>
            <value>
                <fullName>E3 - ADA Manual Foldout Ramp</fullName>
            </value>
            <value>
                <fullName>E5 - ADA Power Foldout Ramp</fullName>
            </value>
            <value>
                <fullName>LF - Toyota Extended Floor Manual Foldout</fullName>
            </value>
            <value>
                <fullName>I3 – Dodge ADA Simple Stow Infloor</fullName>
            </value>
            <value>
                <fullName>V3 - ADA Rear Entry Manual Long</fullName>
            </value>
            <value>
                <fullName>V7 - Rear Entry Manual Long</fullName>
            </value>
            <value>
                <fullName>V8 - Rear Entry Power Long</fullName>
            </value>
            <value>
                <fullName>VB - Rear Entry ADA Power Short</fullName>
            </value>
            <value>
                <fullName>VL - Rear Entry Taxi Manual Long</fullName>
            </value>
            <value>
                <fullName>VM - Rear Entry Manual Short</fullName>
            </value>
            <value>
                <fullName>VA - ADA Rear Entry Manual Short</fullName>
            </value>
            <value>
                <fullName>VT - ADA Taxi Rear Entry Manual Short</fullName>
            </value>
            <value>
                <fullName>SOB - Some Other Brand</fullName>
            </value>
            <value>
                <fullName>NCL - Century Lift</fullName>
            </value>
            <value>
                <fullName>NL - Millennium Lift</fullName>
            </value>
            <value>
                <fullName>NVL - Vista Lift</fullName>
            </value>
            <value>
                <fullName>NUVL - Under Vehicle Lift</fullName>
            </value>
            <value>
                <fullName>(VMI) NorthStar E</fullName>
            </value>
            <value>
                <fullName>(VMI) Summit</fullName>
            </value>
            <value>
                <fullName>(VMI) NorthStar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>