force-app/main/default/objects/Case/fields/Conversion_Type_DL__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Type_DL__c</fullName>
    <label>Conversion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>V7</fullName>
            </value>
            <value>
                <fullName>XT</fullName>
            </value>
            <value>
                <fullName>XI</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>E3</fullName>
            </value>
            <value>
                <fullName>V3</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>