force-app/main/default/objects/Case/fields/Date_Of_Sale_To_New_Owner__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Sale_To_New_Owner__c</fullName>
    <label>Date Of Sale To New Owner</label>
    <type>Date</type>
</CustomField>