force-app/main/default/objects/Case/fields/Date_of_Submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Submission__c</fullName>
    <label>Date of Submission</label>
    <type>Date</type>
</CustomField>