force-app/main/default/objects/Case/fields/Delivery_Date_Needed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Needed__c</fullName>
    <label>Delivery Date Needed</label>
    <type>Date</type>
</CustomField>