force-app/main/default/objects/Case/fields/Door_Key_Codes__c.field-meta.xml
<CustomField>
    <fullName>Door_Key_Codes__c</fullName>
    <label>Door Key Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>