force-app/main/default/objects/Case/fields/Flooring__c.field-meta.xml
<CustomField>
    <fullName>Flooring__c</fullName>
    <label>Flooring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RUBBER</fullName>
            </value>
            <value>
                <fullName>CARPET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>