force-app/main/default/objects/Case/fields/Form_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Form_Completed_By__c</fullName>
    <label>Form Completed By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>