force-app/main/default/objects/Case/fields/Has_Locking_Lug_Nuts__c.field-meta.xml
<CustomField>
    <fullName>Has_Locking_Lug_Nuts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Locking Lug Nuts</label>
    <type>Checkbox</type>
</CustomField>