force-app/main/default/objects/Case/fields/Hold_Release_Scheduled_At__c.field-meta.xml
<CustomField>
    <fullName>Hold_Release_Scheduled_At__c</fullName>
    <description>BC-658 indicates when inventory will be released from application hold</description>
    <inlineHelpText>indicates when inventory will be released from application hold</inlineHelpText>
    <label>Hold Release Scheduled At</label>
    <type>DateTime</type>
</CustomField>