force-app/main/default/objects/Case/fields/Hold_Released__c.field-meta.xml
<CustomField>
    <fullName>Hold_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BC-658 indicates if inventory application hold was already released</description>
    <inlineHelpText>indicates if inventory application hold was already released</inlineHelpText>
    <label>Hold Released</label>
    <type>Checkbox</type>
</CustomField>