force-app/main/default/objects/Case/fields/Keep_Center_Seat_Console__c.field-meta.xml
<CustomField>
    <fullName>Keep_Center_Seat_Console__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep Center Seat/Console</label>
    <type>Checkbox</type>
</CustomField>