force-app/main/default/objects/Case/fields/Name_of_New_Owner__c.field-meta.xml
<CustomField>
    <fullName>Name_of_New_Owner__c</fullName>
    <label>Name of New Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>