force-app/main/default/objects/Case/fields/Need_Power_Door_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Need_Power_Door_Upgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Power Door Upgrade?</label>
    <type>Checkbox</type>
</CustomField>