force-app/main/default/objects/Case/fields/Quantity_Requested__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Requested__c</fullName>
    <label>Quantity Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>