force-app/main/default/objects/Case/fields/Recall_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Recall_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recall</label>
    <referenceTo>Recall__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>