force-app/main/default/objects/Case/fields/Recalled_Asset__c.field-meta.xml
<CustomField>
    <fullName>Recalled_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this claim is related to a recall, please select the appropriate asset/recall combination.</description>
    <inlineHelpText>If this claim is related to a recall, please select the appropriate asset/recall combination.</inlineHelpText>
    <label>Recalled Asset</label>
    <referenceTo>Recallable__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>