force-app/main/default/objects/Case/fields/Seat_Cycle_Count__c.field-meta.xml
<CustomField>
    <fullName>Seat_Cycle_Count__c</fullName>
    <label>Seat Cycle Count</label>
    <length>25</length>
    <type>Text</type>
</CustomField>