force-app/main/default/objects/Case/fields/Seat_Model__c.field-meta.xml
<CustomField>
    <fullName>Seat_Model__c</fullName>
    <label>Seat Model</label>
    <length>25</length>
    <type>Text</type>
</CustomField>