force-app/main/default/objects/Case/fields/Seat_Serial__c.field-meta.xml
<CustomField>
    <fullName>Seat_Serial__c</fullName>
    <label>Seat Serial #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>