force-app/main/default/objects/Case/fields/Seat_Series_or_REV__c.field-meta.xml
<CustomField>
    <fullName>Seat_Series_or_REV__c</fullName>
    <label>Seat Series or REV</label>
    <length>25</length>
    <type>Text</type>
</CustomField>