force-app/main/default/objects/Case/fields/Seating__c.field-meta.xml
<CustomField>
    <fullName>Seating__c</fullName>
    <label>Seating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEM REMOUNT</fullName>
            </value>
            <value>
                <fullName>AFTERMARKET BUCKETS</fullName>
            </value>
            <value>
                <fullName>3RD ROW AFTERMARKET 2 PRESSENGER BENCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>