force-app/main/default/objects/Case/fields/Ship_Out_Options__c.field-meta.xml
<CustomField>
    <fullName>Ship_Out_Options__c</fullName>
    <label>Ship Out Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>