force-app/main/default/objects/Case/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Shipping_Street__c &amp; &quot;, &quot; &amp; Shipping_City__c &amp; &quot;, &quot; &amp; Shipping_State__c &amp; &quot; &quot; &amp; Shipping_Postal_Code__c &amp; &quot; &quot; &amp;  Shipping_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>