force-app/main/default/objects/Case/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sample Ship</fullName>
            </value>
            <value>
                <fullName>Dealer Pick Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>