force-app/main/default/objects/Case/fields/Special_Claims_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Special_Claims_Exceptions__c</fullName>
    <label>Special Claims &amp; Exceptions</label>
    <length>55</length>
    <type>Text</type>
</CustomField>