force-app/main/default/objects/Case/fields/Special_Claims_Exceptions_Amount__c.field-meta.xml
<CustomField>
    <fullName>Special_Claims_Exceptions_Amount__c</fullName>
    <label>Special Claims &amp; Exceptions Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>