force-app/main/default/objects/Case/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TCF (Floorplan)</fullName>
            </value>
            <value>
                <fullName>CIA (Sending payment prior to shipment)</fullName>
            </value>
            <value>
                <fullName>Net 30 (Customer Supplied)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>