force-app/main/default/objects/Case/fields/This_Unit_Is__c.field-meta.xml
<CustomField>
    <fullName>This_Unit_Is__c</fullName>
    <label>This Unit Is</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For Stock</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>