force-app/main/default/objects/Case/fields/Tool_to_remove_lug_nuts__c.field-meta.xml
<CustomField>
    <fullName>Tool_to_remove_lug_nuts__c</fullName>
    <label>Tool to remove lug nuts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>has been placed in glove box</fullName>
            </value>
            <value>
                <fullName>has NOT been placed in glove box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>