force-app/main/default/objects/Case/fields/Vehicle_VIN__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_VIN__c</fullName>
    <inlineHelpText>Must be 17 characters long</inlineHelpText>
    <label>Vehicle VIN #</label>
    <length>17</length>
    <type>Text</type>
</CustomField>