force-app/main/default/objects/Case/recordTypes/Address_Request.recordType-meta.xml
<RecordType>
    <fullName>Address_Request</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <label>Address Request</label>
</RecordType>