force-app/main/default/objects/Case/recordTypes/Chassis_Hold.recordType-meta.xml
<RecordType>
    <fullName>Chassis_Hold</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <label>Chassis Hold</label>
</RecordType>