force-app/main/default/objects/Case/recordTypes/Customer_Supplied.recordType-meta.xml
<RecordType>
    <fullName>Customer_Supplied</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <label>Customer Supplied</label>
</RecordType>