force-app/main/default/objects/Case/recordTypes/Dealer_Locate.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Locate</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <label>Dealer Locate</label>
</RecordType>