force-app/main/default/objects/Case/recordTypes/Honda_C_of_O.recordType-meta.xml
<RecordType>
    <fullName>Honda_C_of_O</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <label>Honda C of O</label>
</RecordType>