force-app/main/default/objects/Case/recordTypes/RMA_Request.recordType-meta.xml
<RecordType>
    <fullName>RMA_Request</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <label>RMA Request</label>
</RecordType>