force-app/main/default/objects/Case/recordTypes/Seat_Technical.recordType-meta.xml
<RecordType>
    <fullName>Seat_Technical</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <label>Seat Technical</label>
</RecordType>