force-app/main/default/objects/Case/recordTypes/Warranty_Claim.recordType-meta.xml
<RecordType>
    <fullName>Warranty_Claim</fullName>
    <active>true</active>
    <businessProcess>Warranty Claim</businessProcess>
    <label>Warranty Claim</label>
</RecordType>