force-app/main/default/objects/Case/listViews/All_Claims_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>All_Claims_Pending_Approval</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Account_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Warranty_Claim</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>All Claims Pending Approval</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>