force-app/main/default/objects/Case/listViews/All_Warranty_Claims.listView-meta.xml
<ListView>
    <fullName>All_Warranty_Claims</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Account_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>VIN_Serial_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Warranty_Claim</value>
    </filters>
    <label>All Warranty Claims</label>
</ListView>