force-app/main/default/objects/Case/listViews/Stellantis_Warranty_Restart_Cases.listView-meta.xml
<ListView>
    <fullName>Stellantis_Warranty_Restart_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Number__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>ASSET.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.FCA_Retail_Customer_Warranty_Start</value>
    </filters>
    <label>Stellantis Warranty Restart Cases</label>
</ListView>